# rocket

./: .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  commitlint.config.js  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
apps/capacitor-mobile-starter/: README.md  capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/nextjs-app-starter/: next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/nextjs-pages-starter/: .env.example  package.json  playwright.config.ts  tsconfig.json
apps/tanstack-start-starter/: package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/tauri-desktop-starter/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri-desktop-starter/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-desktop-starter/src-tauri/capabilities/: default.json
apps/tauri-desktop-starter/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/tauri-desktop-starter/src-tauri/src/commands/: files.rs  mod.rs  notes.rs  state.rs  system.rs
apps/vite-react-router-starter/: package.json  react-router.config.ts  tsconfig.json  vite.config.ts
apps/vite-tanstack-router-starter/: .env.example  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/wxt-extension-starter/: package.json  tsconfig.json  wxt.config.ts
engine/playwright-config/: package.json  tsconfig.json
engine/rocket-ui/: package.json  tsconfig.json  vitest-results.json  vitest.config.ts
(+701 files in other folders)
